--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=7e65cedfde4009fb465e362c0c296d18
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://gabriel:shivathalie@127.0.0.1:3306/demo-ci
+DATABASE_URL=mysql://root:@127.0.0.1:3306/demo-ci
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
