--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "phpspec/phpspec": "^5.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "sensiolabs/security-checker": "^5.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
@@ -29,7 +31,14 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "behat/behat": "^3.5",
+        "behat/mink": "^1.7",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.3",
+        "behat/mink-goutte-driver": "^1.2",
         "nelmio/alice": "^3.5",
+        "phpstan/phpstan": "^0.11.0",
+        "squizlabs/php_codesniffer": "*",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
@@ -65,7 +74,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
